[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliability-api"
version = "0.1.0"
description = "Reliability API skeleton"
authors = [{name = "Reliability API", email = "ops@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "httpx",
]

[tool.setuptools]
packages = [
    "adapters",
    "adapters.gateway",
    "adapters.sdk",
    "adapters.sdk.py",
    "core",
    "core.runtime",
    "api",
    "api.http",
    "examples",
    "examples.langchain_guard",
    "examples.crewai_policy",
    "examples.gateway_proxy",
    "examples.full_sdk_runtime",
]
